# z2pgh

./: Cargo.toml  Dockerfile  fly.toml  spec.yaml
.github/workflows/: general.yml
configuration/: local.yaml  production.yaml
migrations/: 20231016172254_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  server_state.rs  startup.rs  state.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
