[package]
name = "z2pgh"
version = "0.1.0"
authors = ["Vladimir Krivopalov <vladimir.krivopalov@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2pgh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
tide = "0.17.0-beta.1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-async-std",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
surf = "2.3.2"
