[package]
name = "z2pgh"
version = "0.1.0"
authors = ["Vladimir Krivopalov <vladimir.krivopalov@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2pgh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = "0.13.3"
once_cell = "1.18.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.2.0"
surf = "2.3.2"
tide = "0.16"
tide-tracing = "0.0.12"
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4"] }
validator = "0.16.1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-async-std",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
claims = "0.7.1"
fake = "2.8.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1"
wiremock = "0.5.19"
